добавлены пункты в "отчеты встречи"

--- a/Auxilary_Files/Reports/2016_04_07.md
+++ b/Auxilary_Files/Reports/2016_04_07.md
@@ -2,3 +2,10 @@
 
 1. Закрепили навыки работы с GitHub (одновременое редактирование двумя разработчиками одного и того же файла, разрешение конфликтов)
 2. Выбрали название для приложения: _**Clothes Forecast**_
+3. 3. К нам присоединился новый Участник Наталья. Выполняет роли PO и PR. (Общение через skype, googleDocs).
+
+4. Определились с задачами к следующей встрече: 
+
+a. Рисуем эскизы (можно в папку sketches на git, можно в googleDocs 
+https://drive.google.com/drive/u/0/folders/0B-5B8VcS9zv-UjJPYjUwOXMyTlU).
+б. Прописываем алгоритмы.
