--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -3,3 +3,21 @@
 первое изменение
 
 +1
+
+# Формулы для расчета:
+Формула с температурой и давлением. dewpoint - точка росы, вычисляется от относительной влажности. 
+T + h;
+h = (0.5555) * (e - 10.0);
+e = 6.11  exp(5417.7530  ((1/273.16) - (1/dewpoint)));
+
+Температура и скорость ветра: 
+Windchill Temperature = 0.045*(5.2735*SQROOT(W) + 10.45 - 0.2778*W)*(T - 33.0) + 33;
+WCF = 1.1626 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (33.0 - T)
+
+Формула расчета точки росы (Тр):
+относительная влажность Rh (%), температура воздуха Т (°С)
+
+Тр = b * f(T, Rh) / a - f(T, Rh)
+
+f(T, Rh) = (a * T / b + T) + ln(Rh/100)
+a = 17,27, b = 237,7
