--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -1,23 +1,28 @@
 ## Алгоритмы
 
-первое изменение
+### Общий алгоритм работы, для назначения рекомендаций
+![Изображение общего алгоритма]
+(https://raw.githubusercontent.com/khasang-incubator/ClothesForecast/develop/Auxilary_Files/Алгоритм_stereoVibe.png)
 
-+1
+### Формулы для расчета:
+Как видно на изображении, для расчета сводной эффективной температуры (**Те**), необходимо высчитать два показателя, две зависимости температуры - от давления и от силы ветра. <br>
+Пусть зависимость температуры от давления будет **Теp** <br>
+Зависимость температуры от силы ветра будет **Tew** <br>
 
-# Формулы для расчета:
-Формула с температурой и давлением. dewpoint - точка росы, вычисляется от относительной влажности.
-T + h;
+**Tep = T + h**, где <br>
+T - температура в Фаренгейтах (°F) <br>
+Dp - точка росы (формула ниже дает результат в °С, необходим перевод в °F) <br>
 * h = (0.5555) * (e - 10.0);
-* e = 6.11 * exp(5417.7530  ((1/273.16) - (1/dewpoint)));
+* e = 6.11 * exp(5417.7530  ((1/273.16) - (1/Dp)));
+* Dp = b * f(T, Rh) / a - f(T, Rh), где <br>
+  Rh - относительная влажность(%), <br> 
+  Т - температура воздуха (°С) <br>
+  f(T, Rh) = (a * T / b + T) + ln(Rh/100) <br>
+  a = 17,27, b = 237,7<br>
 
-Температура и скорость ветра: 
-* Windchill Temperature = 0.045 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (T - 33.0) + 33;
+**Tew = 0.045 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (T - 33.0) + 33**, где <br>
+W - скорость ветра в км/ч (в зависимости от данных API, необходимо пересчет в м/с) <br>
+T - температура в °С <br>
+
+***WCF*** - Wind Chill Factor (Фактор охлаждения ветром). Пока не очень ясно как его можно применить.
 * WCF = 1.1626 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (33.0 - T)
-
-Формула расчета точки росы (Тр):
-относительная влажность Rh (%), температура воздуха Т (°С)
-
-Тр = b * f(T, Rh) / a - f(T, Rh)
-
-f(T, Rh) = (a * T / b + T) + ln(Rh/100)
-a = 17,27, b = 237,7
