--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -5,11 +5,11 @@
 (https://raw.githubusercontent.com/khasang-incubator/ClothesForecast/develop/Auxilary_Files/Алгоритм_stereoVibe.png)
 
 ### Формулы для расчета:
-Как видно на изображении, для расчета сводной эффективной температуры (**Те**), необходимо высчитать два показателя, две зависимости температуры - от давления и от силы ветра. <br>
-Пусть зависимость температуры от давления будет **Теp** <br>
+Как видно на изображении, для расчета сводной эффективной температуры (**Те**), необходимо высчитать два показателя, две зависимости температуры - от влажности и от силы ветра. <br>
+Пусть зависимость температуры от влажности будет **Теh** <br>
 Зависимость температуры от силы ветра будет **Tew** <br>
 
-**Tep = T + h**, где <br>
+**Teh = T + h**, где <br>
 T - температура в Фаренгейтах (°F) <br>
 Dp - точка росы (формула ниже дает результат в °С, необходим перевод в °F) <br>
 * h = (0.5555) * (e - 10.0);
