--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -20,8 +20,8 @@ Dp - точка росы (формула ниже дает результат в
   f(T, Rh) = (a * T / b + T) + ln(Rh/100) <br>
   a = 17,27, b = 237,7<br>
 
-**Tew = 0.045 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (T - 33.0) + 33**, где <br>
-W - скорость ветра в км/ч (в зависимости от данных API, необходимо пересчет в м/с) <br>
+**Tew = 13.12 + 0.6215 * T - 11.37 * (V)^0.16 + 0.3965 * T * (V)^0.16**, где <br>
+V - скорость ветра в км/ч. (в зависимости от данных API, необходимо пересчет в м/с). Данный показатель обычно указывают, как скорость ветра на высоте 10м (высота анемометра), соответсвтенно, если мы не планируем летать, то следует ввести поправку: **V * 1,5** (скорость ветра на высоте 2м.) <br>
 T - температура в °С <br>
 
 ***WCF*** - Wind Chill Factor (Фактор охлаждения ветром). Пока не очень ясно как его можно применить.
