--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -21,7 +21,7 @@ Dp - точка росы (формула ниже дает результат в
   a = 17,27, b = 237,7<br>
 
 **Tew = 13.12 + 0.6215 * T - 11.37 * (V)^0.16 + 0.3965 * T * (V)^0.16**, где <br>
-V - скорость ветра в км/ч. (в зависимости от данных API, необходимо пересчет в м/с). Данный показатель обычно указывают, как скорость ветра на высоте 10м (высота анемометра), соответсвтенно, если мы не планируем летать, то следует ввести поправку: **V * 0,5** (скорость ветра на высоте 2м.) <br>
+V - скорость ветра в км/ч. (в зависимости от данных API, необходимо пересчет в м/с). Данный показатель обычно указывают, как скорость ветра на высоте 10м (высота анемометра), соответсвтенно, если мы не планируем летать, то следует ввести поправку: **V * 0,5** (скорость ветра на высоте 1,5-2м.) <br>
 T - температура в °С <br>
 
 ***WCF*** - Wind Chill Factor (Фактор охлаждения ветром). Пока не очень ясно как его можно применить.
