--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -5,7 +5,7 @@
 (https://raw.githubusercontent.com/khasang-incubator/ClothesForecast/develop/Auxilary_Files/Алгоритм_stereoVibe.png)
 
 ### Формулы для расчета:
-Как видно на изображении, для расчета сводной эффективной температуры (**Те**), необходимо высчитать два показателя, две зависимости температуры - от влажности и от силы ветра. <br>
+Для расчета сводной эффективной температуры (**Те**), необходимо высчитать два показателя, две зависимости температуры - от влажности и от силы ветра. <br>
 Пусть зависимость температуры от влажности будет **Теh** <br>
 Зависимость температуры от силы ветра будет **Tew** <br>
 
@@ -15,7 +15,7 @@ Dp - точка росы (формула ниже дает результат в
 * h = (0.5555) * (e - 10.0);
 * e = 6.11 * exp(5417.7530  ((1/273.16) - (1/Dp)));
 * Dp = b * f(T, Rh) / a - f(T, Rh), где <br>
-  Rh - относительная влажность(%), <br> 
+  Rh - относительная влажность(%), <br>
   Т - температура воздуха (°С) <br>
   f(T, Rh) = (a * T / b + T) + ln(Rh/100) <br>
   a = 17,27, b = 237,7<br>
@@ -24,5 +24,5 @@ Dp - точка росы (формула ниже дает результат в
 V - скорость ветра в км/ч. (в зависимости от данных API, необходимо пересчет в м/с). Данный показатель обычно указывают, как скорость ветра на высоте 10м (высота анемометра), соответсвтенно, если мы не планируем летать, то следует ввести поправку: **V * 0,5** (скорость ветра на высоте 1,5-2м.) <br>
 T - температура в °С <br>
 
-***WCF*** - Wind Chill Factor (Фактор охлаждения ветром). Пока не очень ясно как его можно применить.
+***WCF*** - Wind Chill Factor (Фактор охлаждения ветром). Пока не очень ясно как его можно применить. И нужен ли он вообще.
 * WCF = 1.1626 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (33.0 - T)
