Изменение и добавление ссылок на изображения
Добавлено изображение порядка вычислений.

--- a/Auxilary_Files/Алгоритмы.md
+++ b/Auxilary_Files/Алгоритмы.md
@@ -2,7 +2,7 @@
 
 ### Общий алгоритм работы, для назначения рекомендаций
 ![Изображение общего алгоритма]
-(https://raw.githubusercontent.com/khasang-incubator/ClothesForecast/develop/Auxilary_Files/Алгоритм_stereoVibe.png)
+(https://raw.githubusercontent.com/khasang-incubator/ClothesForecast/stereoVibe-baseFunctions/Auxilary_Files/Алгоритм_stereoVibe.png)
 
 ### Формулы для расчета:
 Для расчета сводной эффективной температуры (**Те**), необходимо высчитать два показателя, две зависимости температуры - от влажности и от силы ветра. <br>
@@ -26,3 +26,7 @@ T - температура в °С <br>
 
 ***WCF*** - Wind Chill Factor (Фактор охлаждения ветром). Пока не очень ясно как его можно применить. И нужен ли он вообще.
 * WCF = 1.1626 * (5.2735 * SQROOT(W) + 10.45 - 0.2778 * W) * (33.0 - T)
+
+В результате, общий порядок вычислений предствлен на следующей схеме: <br>
+![Изображение порядка вычислений]
+(https://raw.githubusercontent.com/khasang-incubator/ClothesForecast/stereoVibe-baseFunctions/Auxilary_Files/Порядок%20расчета%20вычислений.png)
